--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Canvas Grading Tool</title>
 </head>
 <body>
-  <script src="grading-us.js"></script>
+  <script src="grading-ui.js"></script>
 </body>
 </html>
